--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +14,11 @@
   },
   "license": "ISC",
   "name": "react-timer-next",
-  "description": "A timer component for React"
+  "description": "A timer component for React",
+  "keywords": [
+    "timer",
+    "timing",
+    "countdown",
+    "react timer component"
+  ]
 }
